<resources>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="instruction_text">Use your PTITHCM HR account</string>
    <string name="login_button">Login</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="collaboration_title">Work Process</string>
    <string name="feedback_title">Feedback / Questions <font color="#FF0000"><b>*</b></font></string>
    <string name="feedback_label_title">Title <font color="#FF0000"><b>*</b></font></string>
    <string name="feedback_hint_title">Enter a title...</string>
    <string name="feedback_hint_message">Enter your question or feedback...</string>
    <string name="feedback_button_send">Send</string>
    <string name="leave_app_request_title">Leave App Request</string>
    <string name="label_title">Title: </string>
    <string name="label_send_date">Send date: </string>
    <string name="label_sender">Sender: </string>
    <string name="label_content">Content: </string>
    <string name="label_attachment">Attachment:</string>
    <string name="profile_info_title">Profile Information</string>
    <string name="settings_title">Settings</string>
    <string name="language_label">Language</string>
    <string name="notifications_label">Notifications</string>
    <string name="contract_detail_title">Contract Details</string>
    <string name="contract_and_salary_details">Contract and Salary Details</string>
    <string name="contract_id">Contract ID:</string>
    <string name="employee_id">Employee ID:</string>
    <string name="employee_name">Employee Name:</string>
    <string name="contract_type">Contract Type:</string>
    <string name="duration">Duration:</string>
    <string name="status">Status:</string>
    <string name="basic_salary">Basic Salary:</string>
    <string name="position">Position:</string>
    <string name="department_Name">Department:</string>
    <string name="clause">Clause</string>
    <string name="coefficient">Coefficient</string>
    <string name="request_upgrade">Request Upgrade</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="instruction_forgot_text">Enter your email to receive a password reset link</string>
    <string name="send_request_button">Send Request</string>
    <string name="send_request_description">Send password reset request</string>
    <string name="back_to_login">Back to Login</string>
    <string name="functions_title">Functions</string>
    <string name="collaborate">Collaborate</string>
    <string name="decision">Decision</string>
    <string name="leave_request">Leave Request</string>
    <string name="upgrade_request">Upgrade Request</string>
    <string name="feedback">Feedback</string>
    <string name="salary">Salary</string>
    <string name="contract">Contract</string>
    <string name="approve">Approve</string>
    <string name="workplace">Workplace</string>
    <string name="workplace_info">Workplace: Posts and Telecommunications Institute of Technology</string>
    <string name="position_info">Position: Deputy Dean of Information Technology</string>
    <string name="service_duration">Number of\nyears worked</string>
    <string name="rewards">Rewards</string>
    <string name="disciplines">Disciplines</string>
    <string name="leave_application_title">Leave Application</string>
    <string name="leave_type_label">Leave Type <font color="#FF0000"><b>*</b></font></string>
    <string name="start_date_label">From <font color="#FF0000"><b>*</b></font></string>
    <string name="end_date_label">To <font color="#FF0000"><b>*</b></font></string>
    <string name="reason_label">Content <font color="#FF0000"><b>*</b></font></string>
    <string name="reason_hint">Enter content...</string>
    <string name="send_button">Submit</string>
    <string name="error_message">An error occurred. Please try again</string>
    <string name="notifications_title">Notifications</string>
    <string name="empty_notifications">Notification list is empty</string>
    <string-array name="select_type_notification">
        <item>All</item>
        <item>Unread</item>
        <item>Read</item>
    </string-array>
    <string-array name="select_type_status">
        <item>PENDING</item>
        <item>APPROVED</item>
        <item>REJECTED</item>
    </string-array>
    <string-array name="select_type_notification_history">
        <item>ALL</item>
        <item>DEPARTMENT</item>
        <item>SINGLE</item>
    </string-array>
    <string name="profile_info">Personal Information</string>
    <string name="app_info">App Information</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="leave_history">Leave History</string>
    <string name="stats_title">Leave Request Statistics</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="leave_list_title">Leave Request List</string>
    <string name="empty_leave_history">Leave history is empty</string>
    <string name="reset_password_title">Create New Password</string>
    <string name="reset_confirm_password_hint">Confirm Password</string>
    <string name="confirm_button">Confirm</string>
    <string name="seniority_title">Seniority and Benefits</string>
    <string name="seniority_leave">Seniority Leave Days</string>
    <string name="seniority_allowance">Seniority Allowance</string>
    <string name="tip_message">🎯 Tip: Accumulate leave days if not fully used!</string>
    <string name="verify_otp_title">Verify OTP</string>
    <string name="otp_instruction">Enter the 6-digit code sent to your email</string>
    <string name="verify_button">Confirm</string>
    <string name="no_otp_received">Didn\'t receive the code?</string>
    <string name="resend_otp">Resend</string>
    <string name="app_name">PM-Box PTIT\nHCM</string>
    <string name="forgot_password">Forgot password?</string>
    <string-array name="select_language">
        <item>Vietnamese</item>
        <item>English</item>
    </string-array>
    <string-array name="language_codes">
        <item>vi</item>
        <item>en</item>
        <item>zh</item>
    </string-array>
    <string name="user_email">Email</string>
    <string name="user_number_cccd">ID number</string>
    <string name="user_phone_number">Phone number</string>
    <string name="user_dob">Date of birth</string>
    <string name="user_gender">Gender</string>
    <string name="user_address">Address</string>
    <string name="user_ethnicity">Ethnicity</string>
    <string name="user_religion">Religion</string>
    <string name="user_tax_code">Tax code</string>
    <string name="user_degree">Degree</string>
    <string name="user_status">Status</string>
    <string name="not_available">Not available</string>
    <string name="user_status_pending">Pending</string>
    <string name="user_status_expired">Expired</string>
    <string name="user_status_terminated">Terminated</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="error_old_password_empty">Please enter your old password</string>
    <string name="error_confirm_password_empty">Please confirm your password</string>
    <string name="error_new_password_same_as_old">New password cannot be the same as old password</string>
    <string name="error_password_weak">Password must be at least 8 characters long and contain numbers and special characters</string>
    <string name="error_feedback_title_empty">Please enter a title for your feedback</string>
    <string name="error_feedback_title_too_long">Title is too long (max 100 characters)</string>
    <string name="error_feedback_reason_empty">Please describe your feedback</string>
    <string name="error_feedback_reason_too_short">Description is too short (min 20 characters)</string>
    <string name="error_feedback_reason_too_long">Description is too long (max 1000 characters)</string>
    <string name="darkModeLabel">Dark Mode</string>
    <string name="downloading_contract">Download Contract\n</string>
    <string name="back_button_description">Back</string>
    <string name="download_attachment">Download attachment</string>
    <string name="send_notification">Send Notification</string>
    <string name="search_recipient">Search for Recipients</string>
    <string name="selected_recipients">Selected Recipients</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_content">Notification Content</string>
    <string name="attachment">Attachment</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="choose_file">Choose File</string>
    <string name="history_notifications">History Notifications</string>
    <string name="decision_award">Award</string>
    <string name="decision_discipline">Discipline</string>
    <string name="decision_promotion">Promotion</string>
    <string name="decision_increase_salary">Salary Increase</string>
    <string name="decision_seniority_allowance">Seniority Allowance</string>
    <string name="decision_termination">Termination</string>
    <string-array name="select_type_decision">
        <item>AWARD</item>
        <item>DISCIPLINE</item>
        <item>PROMOTION</item>
        <item>INCREASE_SALARY</item>
        <item>SENIORITY_ALLOWANCE</item>
        <item>TERMINATION</item>
    </string-array>
    <string-array name="select_type_decision_status">
        <item>@string/status_unsigned</item>
        <item>@string/status_signed</item>
    </string-array>
    <string name="status_unsigned">Unsigned</string>
    <string name="status_signed">Signed</string>
    <string-array name="select_type_salary_promotion">
        <item>APPROVED</item>
        <item>REJECTED</item>
    </string-array>
    <string name="contract_status_pending">Pending</string>
    <string name="contract_status_expired">Expired</string>
    <string name="contract_status_terminated">Terminated</string>
    <string name="contract_status_renewed">Renewed</string>
    <string name="contract_status_signed">Signed</string>
    <string name="contract_status_active">Active</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_invalid_jwt">Jwt invalid</string>
    <string name="error_username_not_found">Username does not exist</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_account_locked">Account locked</string>
    <string name="error_degree_not_found">Degree not found</string>
    <string name="select_send_type">Select Send Type</string>
    <string name="individual">Individual</string>
    <string name="department">Department</string>
    <string name="all_users">All Users</string>
    <string name="search_hint">Enter employee name</string>
    <string name="notification_title_hint">Enter notification title</string>
    <string name="notification_content_hint">Enter notification content</string>
    <string name="select_department">Select Department</string>
    <string name="reject">Reject</string>
    <string name="salary_promotion_detail">Salary Promotion Details</string>
    <string name="hint_enter_approval_rejection_note">Enter approval / rejection note…</string>
    <string name="action_sign">Sign</string>
    <string name="upload_signed_file">Please upload the signed decision file</string>
    <string name="no_file_chosen">No file selected</string>
    <string name="cancel">Cancel</string>
</resources>