<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    android:background="@android:color/transparent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <!-- Main Content -->
        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/dialog_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_signed_file"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/button_background_3"
                android:padding="8dp"
                android:layout_marginBottom="24dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/uploadFileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/choose_file"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_background"
                    android:textAllCaps="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView
                    android:id="@+id/selectedFileTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/no_file_chosen"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/dark_gray"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/red"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/green"
                    android:background="@drawable/button_background" />
            </LinearLayout>
        </LinearLayout>
        <!-- Overlay loading -->
        <include
            layout="@layout/progress_overlay"
            android:id="@+id/progressBar"
            android:visibility="gone" />
    </FrameLayout>
</androidx.cardview.widget.CardView>
